--- a/Sispec.ClientApp/sispeclient/index.html
+++ b/Sispec.ClientApp/sispeclient/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>SisPEC - LEMAF - Sistema de Cadastro de Evento do Lemaf</title>
+    <title>SisE-LEMAF - Sistema de Cadastro de Evento do Lemaf</title>
   </head>
   <body>
     <div id="app"></div>
